--- a/theAPP/static/css/test.css
+++ b/theAPP/static/css/test.css
@@ -31,18 +31,17 @@ body {
 }
 
 .neonBox {
-    /* background-color: rgb(25, 25, 25); */
     background-color: rgb(0, 0, 0);
-    border: solid white 1px;
+    border: solid rgba(255, 255, 255, 0.861) 1px;
     border-radius: 50px;
     padding: 25px;
     box-sizing: border-box;
     box-shadow: 0 0 .2rem #fff,
         0 0 .2rem #ffffff,
-        0 0 2rem #1DB954,
+        0 0 0.4rem #1DB954,
         0 0 0.8rem #1DB954,
-        0 0 2.8rem #1DB954,
-        inset 0 0 1.3rem #1DB954;
+        0 0 0.8rem #1DB954,
+        inset 0 0 1.0rem #1DB954;
 }
 
 #user-info {
@@ -70,8 +69,12 @@ body {
     left: 30px;
     top: 30px;
 
-    width: 800px;
+    width: 400px;
     height: 400px;
+}
+
+#spyder-graph {
+    height: 100%;
 }
 
 #timeline {
@@ -82,4 +85,9 @@ body {
 
     width: auto;
     height: 300px;
+}
+
+#timeline-graph {
+    height: 100%;
+    width: auto;
 }
