--- a/theAPP_copy/templates/test.html
+++ b/theAPP_copy/templates/test.html
@@ -24,6 +24,11 @@
 
     </div>
 
+    <!-- Song Info -->
+    <div id="song-info" class="neonBox">
+
+    </div>
+
     <!-- Time Line -->
     <div id="timeline" class="neonBox">
         <div python_dash_range_slider></div>
