--- a/theAPP_copy/static/css/test.css
+++ b/theAPP_copy/static/css/test.css
@@ -44,33 +44,39 @@ body {
         inset 0 0 1.0rem #1DB954;
 }
 
-#user-info {
-    position: absolute;
-    right: 30px;
-    top: 20px;
-
-    width: 300px;
-    height: 400px;
-}
-
-#info-header {
-    font-size: x-large;
-    width: 100%;
-    text-align: right;
-}
-
-
 #bbScore {
     font-size: 200%;
 }
 
+#userName {
+    font-size: 270%;
+}
+
+#user-info {
+    position: absolute;
+    right: 30px;
+    top: 15vh;
+
+    width: 29vw;
+    height: 50vh;
+}
+
+#song-info {
+    position: absolute;
+    left: 32vw;
+    top: 15vh;
+
+    width: 29vw;
+    height: 50vh;
+}
+
 #spider-chart {
     position: absolute;
-    left: 30px;
-    top: 30px;
+    left: 2vw;
+    top: 15vh;
 
-    width: 400px;
-    height: 400px;
+    width: 29vw;
+    height: 50vh;
 }
 
 #spyder-graph {
@@ -84,10 +90,21 @@ body {
     bottom: 20px;
 
     width: auto;
-    height: 300px;
+    height: 28vh;
 }
 
 #timeline-graph {
     height: 100%;
     width: auto;
+}
+
+#title-area {
+    position: absolute;
+    right: 30px;
+    top: 20px;
+
+    width: 100%;
+    height: 10vh;
+    text-align: right;
+    font-size: x-large;
 }
