ja click function für graphen

--- a/theAPP_copy/templates/test.html
+++ b/theAPP_copy/templates/test.html
@@ -26,6 +26,8 @@
 
     <!-- Song Info -->
     <div id="song-info" class="neonBox">
+        <div id="info-song" class="neonText">Track Information</div>
+        <div id="selected-song" class="neonText">selected song</div>
 
     </div>
 
