final layout, added table (which is not quite working), final dataframe clara, both graphs working perfectly

--- a/theAPP_copy/templates/test.html
+++ b/theAPP_copy/templates/test.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../static/css/test.css">
 
-</head>
+</head> 
 
 <body>
 
@@ -33,6 +33,7 @@
 
     <!-- Time Line -->
     <div id="timeline" class="neonBox">
+        <div class="neonText">Time Line of the last 50 recently played Songs</div>
         <div python_dash_range_slider></div>
 
     </div>
