--- a/theAPP_copy/static/css/test2.css
+++ b/theAPP_copy/static/css/test2.css
@@ -8,7 +8,8 @@ html {
     padding: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgb(41, 40, 40);
+    /* background-color: rgb(22, 23, 23); */
+    background-image: linear-gradient(to top,  rgb(22, 23, 23), rgb(34, 57, 87))
 }
 
 body {
@@ -41,45 +42,73 @@ body {
     font-size: 200%;
 }
 
-#userName {
-    font-size: 270%;
+#user {
+    top: 10vh;
+    font-size: 200%;
+}
+
+#song-box {
+    font-size: 200%;
+}
+
+#selected-song {
+    font-size: 150%;
+}
+
+#title_timeline {
+    font-size: 150%;
 }
 
 #user-info {
     position: absolute;
-    right: 2vw;
+    left: 0vw;
+    top: 0vh;
+
+    width: 23vw;
+    height:75vh;
+}
+
+#table-scores {
+    position: absolute;
+    left: 0vw;
     top: 15vh;
 
-    width: 28vw;
-    height: 50vh;
+    width: 23vw;
+    /*height: auto;*/
+
+    background-color: rgba(0,0,0,0);
+    box-shadow: none;
 }
 
 #song-info {
     position: absolute;
-    left: 36vw;
-    top: 15vh;
+    left: 23vw;
+    top: 12vh;
 
     width: 28vw;
     height: 50vh;
+
+    background-color: rgba(0,0,0,0);
+    box-shadow: none;
 }
 
 #spider-chart {
     position: absolute;
-    left: 2vw;
-    top: 15vh;
+    right: 2vw;
+    top: 10vh;
 
     /*transform: translate(-10%, 0);*/
-    width: 28vw;
-    height: 50vh;
-    background-color: rgba(0, 0, 0, 0);
+    width: 50vw;
+    height: 55vh;
+    background-color: rgba(0,0,0,0);
     box-shadow: none;
     scale: 1;
 
 }
 
 /* #spyder-graph {
-    height: 120%;
-} */
+    height: 160%;
+}  */
 
 #timeline {
     position: absolute;
@@ -88,22 +117,48 @@ body {
 
     width: 100vw;
     height: 28vh;
+
+    background-color: rgb(25, 20, 20);
+    box-shadow: 6px 6px 6px 0px rgba(25, 20, 20);
 }
 
 #timeline-graph {
     height: 100%;
     width: auto;
+
+    background-color: rgb(25, 20, 20);
 }
 
-#title-area {
+#user-scores {
+    color: white;
+    font-size: 1em;
+}
+
+#checklist {
+    color: white;
+    font-size: 1em;
+}
+
+/* #title-area {
     position: absolute;
-    right: 30px;
+    left: 15vw;
     top: 20px;
 
     width: 100%;
-    height: 10vh;
-    text-align: right;
+    height: 25vh;
+    text-align: left;
     font-size: x-large;
+}
+
+#title {
+    text-align: left;
+    font-size: x-large;
+} 
+
+#spotifyIcon {
+    left: 10vw;
+    height: 100%;
+    width: auto;
 }
 
 #header {
@@ -117,9 +172,5 @@ body {
     color: white;
     font-size: 2em;
     text-align: center;
-}
+} */
 
-#checklist {
-    color: white;
-    font-size: 1em;
-}
