--- a/theAPP_copy/static/css/test2.css
+++ b/theAPP_copy/static/css/test2.css
@@ -9,7 +9,7 @@ html {
     width: 100vw;
     height: 100vh;
     /* background-color: rgb(22, 23, 23); */
-    background-image: linear-gradient(to top,  rgb(22, 23, 23), rgb(34, 57, 87))
+    background-image: linear-gradient(to top, rgb(22, 23, 23), rgb(34, 57, 87))
 }
 
 body {
@@ -65,18 +65,18 @@ body {
     top: 0vh;
 
     width: 23vw;
-    height:75vh;
+    height: 75vh;
 }
 
 #table-scores {
-    position: absolute;
+    position: relative;
     left: 0vw;
     top: 15vh;
 
-    width: 23vw;
+    width: 100%;
     /*height: auto;*/
 
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     box-shadow: none;
 }
 
@@ -88,7 +88,7 @@ body {
     width: 28vw;
     height: 50vh;
 
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     box-shadow: none;
 }
 
@@ -100,7 +100,7 @@ body {
     /*transform: translate(-10%, 0);*/
     width: 50vw;
     height: 55vh;
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     box-shadow: none;
     scale: 1;
 
@@ -139,6 +139,33 @@ body {
     font-size: 1em;
 }
 
+.checkboxDash {
+    /* display: inline-block; */
+    /* width: 90%; */
+    /* height: 30px; */
+    background-color: green;
+}
+
+
+
+/* Style for unchecked checkboxes */
+label>input[type=checkbox]:not(:checked)+label {
+    color: green;
+    /* Text color */
+    background-color: black;
+    /* Background color */
+}
+
+/* Style for checked checkboxes */
+label>input[type=checkbox]:checked+.checkboxDash {
+    color: black;
+    /* Text color */
+    background-color: green;
+    /* Background color */
+}
+
+
+
 /* #title-area {
     position: absolute;
     left: 15vw;
@@ -173,4 +200,3 @@ body {
     font-size: 2em;
     text-align: center;
 } */
-
