--- a/theAPP_copy/static/css/styles.css
+++ b/theAPP_copy/static/css/styles.css
@@ -9,13 +9,23 @@ html {
     width: 100vw;
     height: 100vh;
     /* background-color: rgb(22, 23, 23); */
-    background-image: linear-gradient(to top, rgb(22, 23, 23), rgb(34, 57, 87))
+    background-image: linear-gradient(to top, rgb(22, 23, 23), rgb(34, 57, 87));
+    overflow: hidden;
 }
 
 body {
     font-family: Georgia, serif;
     color: #333;
     margin: 1em;
+}
+
+#spotify-logo {
+    z-index: 999;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 75px;
+    height: 75px;
 }
 
 .neonText {
@@ -108,11 +118,6 @@ body {
 
 }
 
-/*#spyder-graph {
-    height: 160%;
-    bottom: 35vh;
-}*/
-
 #timeline {
     position: absolute;
     left: 0vw;
@@ -143,9 +148,6 @@ body {
 }
 
 .checkboxDash {
-    /* display: inline-block; */
-    /* width: 90%; */
-    /* height: 30px; */
     background-color: green;
 }
 
@@ -166,40 +168,3 @@ label>input[type=checkbox]:checked+.checkboxDash {
     background-color: green;
     /* Background color */
 }
-
-
-
-/* #title-area {
-    position: absolute;
-    left: 15vw;
-    top: 20px;
-
-    width: 100%;
-    height: 25vh;
-    text-align: left;
-    font-size: x-large;
-}
-
-#title {
-    text-align: left;
-    font-size: x-large;
-} 
-
-#spotifyIcon {
-    left: 10vw;
-    height: 100%;
-    width: auto;
-}
-
-#header {
-    width: 100vw;
-    height: 10vh;
-
-    position: absolute;
-    top: 0vh;
-    left: 0vw;
-
-    color: white;
-    font-size: 2em;
-    text-align: center;
-} */
