--- a/theAPP_copy/static/css/styles.css
+++ b/theAPP_copy/static/css/styles.css
@@ -19,13 +19,21 @@ body {
     margin: 1em;
 }
 
-#spotify-logo {
+#header {
     z-index: 999;
     position: absolute;
     right: 10px;
     top: 10px;
-    width: 75px;
-    height: 75px;
+    font-size: xx-large;
+    color: rgb(30, 215, 96);
+    font-weight: bold;
+}
+
+#spotify-logo {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
 }
 
 .neonText {
@@ -91,19 +99,30 @@ body {
 }
 
 #song-info {
+    z-index: 1;
     position: absolute;
-    left: 23vw;
-    /*top: 12vh;*/
+    left: 24vw;
+    top: 8vh;
     bottom: 35vh;
 
-    width: 28vw;
+    width: 40vw;
     height: 62vh;
 
     background-color: rgba(0, 0, 0, 0);
     box-shadow: none;
+
+}
+
+#song-graph {
+    position: absolute;
+    bottom: 50px;
+    left: 40%;
+    transform: translateX(-50%);
+    height: 350px;
 }
 
 #spider-chart {
+    z-index: 999;
     position: absolute;
     right: 2vw;
     /*top: 10vh;*/
@@ -117,6 +136,8 @@ body {
     scale: 1;
 
 }
+
+
 
 #timeline {
     position: absolute;
